# speedy_mogp_hybrid

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: README.md  calculate_precip_std.py  create_annual.py  create_annual_means.py  create_conservation_nc.py  create_lifted_index_annual.py  create_lifted_index_from_nc.py  create_lifted_index_npy.py  create_mean_fields.py  create_mean_fields.sh  create_nc_files.py  create_nc_fluxes_files.py  create_npy.py  create_npy.sh  extract_lifted_index_seasonal_from_annual.py  lifted_index.py  lifted_index_from_nc.py  plot_T_Q.py  plot_annual_field_diff.py  plot_annual_field_diff_nc.py  plot_conservation_timeseries.py  plot_era5.py  plot_field_diff.py  plot_field_diff_gp_vs_gp.py  plot_field_diff_masked.py  plot_field_diff_pcolormesh_scatter.py  plot_field_diff_pnas.py  plot_field_diff_scatter.py  plot_field_diff_scatter_masked.py  plot_field_means.py  plot_gp_pred_multi_year.py  plot_gp_pred_single.py  plot_gpcp.py  plot_lifted_index.py  plot_lifted_index_hist_comparison.py  plot_lifted_index_land_nc.py  plot_lifted_index_nc.py  plot_lifted_index_precipitation.py  plot_monthly_means.py  plot_precip_nc.py  (+9 more)
analysis/auxiliary/: README.md  create_conservation_nc.py  plot_conservation_timeseries.py  plot_gp_pred_multi_year.py  plot_lifted_index_land_nc.py  plot_lifted_index_nc.py  plot_oro_mean_var_lifted_index_locations.py  plot_precip_nc.py  plot_vertical_profiles.py  plot_zonal_averages.py
analysis/climate_data/: OLR_DJF.csv  OLR_JJA.csv  PREC_DJF.csv  (+1 more)
era5/: download_cloudc.py  download_precip.py  script.sh
(+48 files in other folders)
